--- a/backend/package.json
+++ b/backend/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "nounish-widgets-backend",
+  "name": "builder-widgets-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon source/server.ts",
+    "dev": "PORT=3051 nodemon source/server.ts",
     "build": "rm -rf build/ && tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,12 +19,15 @@
     "@types/morgan": "^1.9.3",
     "@types/sharp": "^0.31.0",
     "axios": "^1.1.3",
-    "ethers": "^5.7.2",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "sharp": "^0.31.1",
     "ts-node": "^10.9.1",
-    "typescript": "^4.8.4"
+    "viem": "^0.3.2"
+  },
+  "devDependencies": {
+    "@types/node": "^18.15.11",
+    "typescript": "^5.0.4"
   }
 }
