--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,8 @@
     "@types/morgan": "^1.9.3",
     "@types/sharp": "^0.31.0",
     "axios": "^1.1.3",
+    "dotenv": "^16.0.3",
+    "ethers": "^6.3.0",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
