--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.71.7",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-svg": "^13.9.0",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
