--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -14,6 +14,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "@shopify/flash-list": "^1.4.3",
     "graphql": "^16.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
