--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@shopify/flash-list": "^1.4.3",
+    "dayjs": "^1.11.7",
     "graphql": "^16.6.0",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
