--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -7,26 +7,45 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "rn-nodeify --install assert,url,http,zlib,https,buffer,process,stream,net,crypto --hack && patch-package"
   },
   "dependencies": {
     "@apollo/client": "^3.7.12",
+    "@ethersproject/shims": "^5.7.0",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@shopify/flash-list": "^1.4.3",
+    "@tradle/react-native-http": "^2.0.1",
+    "assert": "^1.5.0",
+    "base-64": "^1.0.0",
+    "big-integer": "^1.6.51",
+    "browserify-zlib": "^0.1.4",
+    "buffer": "^6.0.3",
     "dayjs": "^1.11.7",
+    "ethers": "^6.3.0",
     "graphql": "^16.6.0",
+    "https-browserify": "^0.0.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-crypto": "^2.2.0",
+    "react-native-randombytes": "^3.6.1",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-svg": "^13.9.0",
+    "react-native-tcp": "^3.3.2",
+    "readable-stream": "^1.0.33",
+    "rn-nodeify": "^10.3.0",
+    "stream-browserify": "^1.0.0",
+    "url": "^0.10.3",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/plugin-proposal-private-methods": "^7.18.6",
     "@babel/preset-env": "^7.20.0",
     "@babel/runtime": "^7.20.0",
     "@react-native-community/eslint-config": "^3.2.0",
@@ -45,5 +64,31 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "react-native": {
+    "net": "react-native-tcp",
+    "crypto": "react-native-crypto",
+    "zlib": "browserify-zlib",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
+  },
+  "browser": {
+    "net": "react-native-tcp",
+    "crypto": "react-native-crypto",
+    "zlib": "browserify-zlib",
+    "http": "@tradle/react-native-http",
+    "https": "https-browserify",
+    "_stream_transform": "readable-stream/transform",
+    "_stream_readable": "readable-stream/readable",
+    "_stream_writable": "readable-stream/writable",
+    "_stream_duplex": "readable-stream/duplex",
+    "_stream_passthrough": "readable-stream/passthrough",
+    "stream": "stream-browserify"
   }
 }
