--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -28,6 +28,7 @@
     "react-native-mmkv": "^2.8.0",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
+    "react-native-shared-group-preferences": "^1.1.23",
     "react-native-svg": "^13.9.0",
     "zustand": "^4.3.7"
   },
@@ -41,6 +42,7 @@
     "@tsconfig/react-native": "^2.0.2",
     "@types/jest": "^29.2.1",
     "@types/react": "^18.0.24",
+    "@types/react-native-shared-group-preferences": "^1.1.1",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.2.1",
     "eslint": "^8.19.0",
