--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -19,6 +19,7 @@
     "base-64": "^1.0.0",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
+    "clsx": "^1.2.1",
     "dayjs": "^1.11.7",
     "ethers": "^6.3.0",
     "graphql": "^16.6.0",
