--- a/mobileapp/ios/mobileapp/Info.plist
+++ b/mobileapp/ios/mobileapp/Info.plist
@@ -60,6 +60,6 @@
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
+	<false/>
 </dict>
 </plist>
