--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -12,10 +12,13 @@
   "dependencies": {
     "@apollo/client": "^3.7.12",
     "@ethersproject/shims": "^5.7.0",
+    "@react-native-async-storage/async-storage": "^1.18.1",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@shopify/flash-list": "^1.4.3",
+    "@types/react-native-dotenv": "^0.2.0",
+    "@web3modal/react-native": "^1.0.0-alpha.3",
     "base-64": "^1.0.0",
     "big-integer": "^1.6.51",
     "buffer": "^6.0.3",
@@ -26,7 +29,9 @@
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-mmkv": "^2.8.0",
+    "react-native-modal": "^13.0.1",
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-shared-group-preferences": "^1.1.23",
@@ -50,6 +55,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.9",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.8",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "^3.3.1",
     "typescript": "4.8.4"
