--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.7.12",
     "@ethersproject/shims": "^5.7.0",
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-clipboard/clipboard": "^1.11.2",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
