--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -52,6 +52,8 @@
     "stream": "^0.0.2",
     "stream-browserify": "^1.0.0",
     "url": "^0.11.0",
+    "viem": "^0.3.36",
+    "wagmi": "^1.0.6",
     "zustand": "^4.3.7"
   },
   "devDependencies": {
