--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -40,6 +40,7 @@
     "react-native": "0.71.7",
     "react-native-crypto": "^2.2.0",
     "react-native-get-random-values": "^1.8.0",
+    "react-native-linear-gradient": "^2.6.2",
     "react-native-mmkv": "^2.8.0",
     "react-native-modal": "^13.0.1",
     "react-native-randombytes": "^3.6.1",
