--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -47,6 +47,7 @@
     "react-native-safe-area-context": "^4.5.1",
     "react-native-screens": "^3.20.0",
     "react-native-shared-group-preferences": "^1.1.23",
+    "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "^13.9.0",
     "react-native-tcp": "^4.0.0",
     "readable-stream": "^1.0.33",
