--- a/backend/package.json
+++ b/backend/package.json
@@ -22,7 +22,6 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "morgan": "^1.10.0",
-    "node-fetch": "^3.3.1",
     "nodemon": "^2.0.20",
     "sharp": "^0.31.1",
     "ts-node": "^10.9.1",
@@ -31,5 +30,8 @@
   "devDependencies": {
     "@types/node": "^18.15.11",
     "typescript": "^5.0.4"
+  },
+  "engines": {
+    "node": ">=18"
   }
 }
