--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -50,6 +50,7 @@
     "react-native-shimmer-placeholder": "^2.0.9",
     "react-native-svg": "^13.9.0",
     "react-native-tcp": "^4.0.0",
+    "react-native-toast-message": "^2.1.6",
     "readable-stream": "^1.0.33",
     "stream": "^0.0.2",
     "stream-browserify": "^1.0.0",
