--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -34,6 +34,7 @@
     "fast-text-encoding": "^1.0.6",
     "graphql": "^16.6.0",
     "https-browserify": "^1.0.0",
+    "mixpanel-react-native": "^2.3.1",
     "nativewind": "^2.0.11",
     "process": "^0.11.10",
     "react": "18.2.0",
