--- a/mobileapp/package.json
+++ b/mobileapp/package.json
@@ -53,6 +53,7 @@
     "react-native-svg": "^13.9.0",
     "react-native-tcp": "^4.0.0",
     "react-native-toast-message": "^2.1.6",
+    "react-native-webview": "^13.2.2",
     "readable-stream": "^1.0.33",
     "stream": "^0.0.2",
     "stream-browserify": "^1.0.0",
