--- a/mobileapp/ios/mobileapp/Info.plist
+++ b/mobileapp/ios/mobileapp/Info.plist
@@ -61,5 +61,10 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>rainbow</string>
+		<string>metamask</string>
+	</array>
 </dict>
 </plist>
