--- a/website/package.json
+++ b/website/package.json
@@ -3,23 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "PORT=3050 next dev",
+    "dev": "PORT=5025 next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "autoprefixer": "^10.4.14",
-    "next": "^12.3.0",
-    "postcss": "^8.4.21",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwindcss": "^3.3.1"
-  },
-  "devDependencies": {
-    "@types/node": "18.7.16",
-    "@types/react": "18.0.18",
-    "@types/react-dom": "18.0.5",
-    "typescript": "4.8.3"
+    "@types/node": "20.3.2",
+    "@types/react": "18.2.14",
+    "@types/react-dom": "18.2.6",
+    "autoprefixer": "10.4.14",
+    "next": "13.4.7",
+    "postcss": "8.4.24",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "tailwindcss": "3.3.2",
+    "typescript": "5.1.6"
   }
 }
