--- a/mobileapp/ios/mobileapp/Info.plist
+++ b/mobileapp/ios/mobileapp/Info.plist
@@ -36,7 +36,7 @@
 			<key>localhost</key>
 			<dict>
 				<key>NSExceptionAllowsInsecureHTTPLoads</key>
-				<false/>
+				<true/>
 			</dict>
 		</dict>
 	</dict>
