--- a/apps/backend/railway.toml
+++ b/apps/backend/railway.toml
@@ -1,7 +1,7 @@
 [build]
 builder = "NIXPACKS"
-buildCommand = "pnpm build"
+buildCommand = "pnpm build:backend"
 watchPatterns = ["/apps/backend/**"]
 
 [deploy]
-startCommand = "pnpm start"
+startCommand = "pnpm start:backend"
